build-flag2_err.log
/home/pi/build-flag2/node_modules/webpack/lib/EvalDevToolModulePlugin.js:1
(function (exports, require, module, __filename, __dirname) { /*
                                                              ^^
SyntaxError: Invalid or unexpected token
    at createScript (vm.js:53:10)
    at Object.runInThisContext (vm.js:95:10)
    at Module._compile (module.js:543:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.require (module.js:498:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/home/pi/build-flag2/node_modules/webpack/lib/WebpackOptionsApply.js:9:31)

npm ERR! Linux 4.4.49-v7+
npm ERR! argv "/usr/bin/nodejs" "/usr/lib/node_modules/npm/bin/npm-cli.js" "run" "web"
npm ERR! node v7.10.0
npm ERR! npm  v4.2.0
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! build-flag2@0.1.0 web: `react-scripts start`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the build-flag2@0.1.0 web script 'react-scripts start'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the build-flag2 package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     react-scripts start
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs build-flag2
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls build-flag2
npm ERR! There is likely additional logging output above.

npm ERR! Please include the following file with any support request:
npm ERR!     /root/.npm/_logs/2019-01-02T07_53_53_188Z-debug.log
ERROR: "web" exited with 1.

npm ERR! Linux 4.4.49-v7+
npm ERR! argv "/usr/bin/nodejs" "/usr/bin/npm" "start"
npm ERR! node v7.10.0
npm ERR! npm  v4.2.0
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! build-flag2@0.1.0 start: `run-p server web`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the build-flag2@0.1.0 start script 'run-p server web'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the build-flag2 package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     run-p server web
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs build-flag2
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls build-flag2
npm ERR! There is likely additional logging output above.

npm ERR! Please include the following file with any support request:
npm ERR!     /root/.npm/_logs/2019-01-02T07_53_55_182Z-debug.log
module.js:472
    throw err;
    ^

Error: Cannot find module 'wiringpi-node'
    at Function.Module._resolveFilename (module.js:470:15)
    at Function.Module._load (module.js:418:25)
    at Module.require (module.js:498:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/home/pi/build-flag2/stepper-wiringpi.js:15:11)
    at Module._compile (module.js:571:32)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)

npm ERR! Linux 4.4.49-v7+
npm ERR! argv "/usr/bin/nodejs" "/usr/lib/node_modules/npm/bin/npm-cli.js" "run" "server"
npm ERR! node v7.10.0
npm ERR! npm  v4.2.0
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! build-flag2@0.1.0 server: `node server.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the build-flag2@0.1.0 server script 'node server.js'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the build-flag2 package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     node server.js
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs build-flag2
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls build-flag2
npm ERR! There is likely additional logging output above.

npm ERR! Please include the following file with any support request:
npm ERR!     /root/.npm/_logs/2019-01-02T08_43_14_198Z-debug.log
ERROR: "server" exited with 1.

npm ERR! Linux 4.4.49-v7+
npm ERR! argv "/usr/bin/nodejs" "/usr/bin/npm" "start"
npm ERR! node v7.10.0
npm ERR! npm  v4.2.0
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! build-flag2@0.1.0 start: `run-p server web`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the build-flag2@0.1.0 start script 'run-p server web'.
npm ERR! Make sure you have the latest version of node.js and npm installed.
npm ERR! If you do, this is most likely a problem with the build-flag2 package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     run-p server web
npm ERR! You can get information on how to open an issue for this project with:
npm ERR!     npm bugs build-flag2
npm ERR! Or if that isn't available, you can get their info via:
npm ERR!     npm owner ls build-flag2
npm ERR! There is likely additional logging output above.

npm ERR! Please include the following file with any support request:
npm ERR!     /root/.npm/_logs/2019-01-02T08_43_14_634Z-debug.log
